# api.yaml
@@ -139,71 +139,67 @@ paths:
             type: string
       responses:
         '200':
-          description: A list of systems
+          description: System metadata
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    system_id:
-                      type: integer
-                    system_name:
-                      type: string
-                    system_description:
-                      type: string
-                    active:
-                      type: string
-                    module_model_id:
-                      type: integer
-                      nullable: true
-                    system_owner:
-                      type: string
-                    number_of_strings:
-                      type: integer
-                      nullable: true
-                    system_mounting:
-                      type: string
-                      nullable: true
-                    fixed_azimuth_deg:
-                      type: number
-                      nullable: true
-                    fixed_tilt_deg:
-                      type: number
-                      nullable: true
-                    axis_azimuth_deg:
-                      type: number
-                      nullable: true
-                    axis_tilt_deg:
-                      type: number
-                      nullable: true
-                    tilt_max_deg:
-                      type: number
-                      nullable: true
-                    start_date:
-                      type: string
-                      format: date-time 
-                      nullable: true
-                    end_date:
-                      type: string
-                      format: date-time
-                      nullable: true
-                    gpoa_testpad_name:
-                      type: string
-                      nullable: true
-                    temp_testpad_name:
-                      type: string
-                      nullable: true
-                    wind_testpad_name:
-                      type: string
-                      nullable: true
-                    testpad_name:
-                      type: string
-                      nullable: true
-                    notes:
-                      type: string
-                      nullable: true
+                type: object
+                properties:
+                  system_id:
+                    type: integer
+                  system_name:
+                    type: string
+                  system_description:
+                    type: string
+                  active:
+                    type: string
+                  module_model_id:
+                    type: integer
+                    nullable: true
+                  system_owner:
+                    type: string
+                  number_of_strings:
+                    type: integer
+                    nullable: true
+                  system_mounting:
+                    type: string
+                    nullable: true
+                  fixed_azimuth_deg:
+                    type: number
+                    nullable: true
+                  fixed_tilt_deg:
+                    type: number
+                    nullable: true
+                  axis_azimuth_deg:
+                    type: number
+                    nullable: true
+                  axis_tilt_deg:
+                    type: number
+                    nullable: true
+                  tilt_max_deg:
+                    type: number
+                    nullable: true
+                  start_date:
+                    type: string
+                    nullable: true
+                  end_date:
+                    type: string
+                    nullable: true
+                  gpoa_testpad_name:
+                    type: string
+                    nullable: true
+                  temp_testpad_name:
+                    type: string
+                    nullable: true
+                  wind_testpad_name:
+                    type: string
+                    nullable: true
+                  testpad_name:
+                    type: string
+                    nullable: true
+                  notes:
+                    type: string
+                    nullable: true
         '401':
           description: Unauthorized
         '404':
